--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ plugins {
 
     // Apply the groovy plugin to also add support for Groovy (needed for Spock)
     id 'groovy'
+
+    id 'checkstyle'
 }
 
 repositories {
