--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ plugins {
     id 'groovy'
 
     id 'checkstyle'
+
+    id 'jacoco'
 }
 
 repositories {
@@ -40,4 +42,30 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClassName = 'pl.futurecollars.invoicing.App'
+}
+
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                counter = 'BRANCH'
+                minimum = 0.90
+            }
+        }
+        rule {
+            limit {
+                counter = 'LINE'
+                minimum = 0.90
+            }
+        }
+    }
+}
+
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+    finalizedBy jacocoTestCoverageVerification
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
