--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.1'
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 
@@ -58,20 +61,23 @@ jacocoTestCoverageVerification {
         rule {
             limit {
                 counter = 'BRANCH'
-                minimum = 0.90
+                minimum = 0.80
             }
         }
         rule {
             limit {
                 counter = 'LINE'
-                minimum = 0.90
+                minimum = 0.80
             }
         }
     }
 }
 
 test {
-    finalizedBy jacocoTestReport // report is always generated after tests run
+    finalizedBy jacocoTestReport
+}
+
+check {
     finalizedBy jacocoTestCoverageVerification
 }
 
