--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ plugins {
     id 'jacoco'
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
