--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ plugins {
     id 'groovy'
     id 'checkstyle'
     id 'jacoco'
+    id 'codenarc'
 }
 
 repositories {
@@ -92,4 +93,11 @@ checkstyle {
     ignoreFailures = false
     maxWarnings = 0
     maxErrors = 0
+}
+
+codenarcTest {
+    configFile = file('config/codenarc/codenarc.groovy')
+    maxPriority1Violations = 0
+    maxPriority2Violations = 0
+    maxPriority3Violations = 999
 }
