--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext {
+        flywayVersion = '7.6.0'
         lombokVersion = '1.18.18'
         spockVersion = '1.3-groovy-2.5'
         springBootVersion = '2.4.2'
@@ -26,12 +27,16 @@ repositories {
 dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
+    compile "org.flywaydb:flyway-core:${flywayVersion}"
+
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
 
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation "io.springfox:springfox-boot-starter:${springFoxStarterVersion}"
     implementation "io.springfox:springfox-swagger-ui:${springFoxUiVersion}"
 
+    runtimeOnly 'org.postgresql:postgresql:42.2.19'
 
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
