--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,11 @@ logging:
       futurecollars:
         invoicing: INFO
         invoicing.db: DEBUG
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/invoicing
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+
