--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "io.springfox:springfox-boot-starter:${springFoxStarterVersion}"
     implementation "io.springfox:springfox-swagger-ui:${springFoxUiVersion}"
 
+    runtimeOnly 'com.h2database:h2:1.4.200'
     runtimeOnly 'org.postgresql:postgresql:42.2.19'
 
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
@@ -52,7 +53,7 @@ jacocoTestCoverageVerification {
         rule {
             limit {
                 counter = 'BRANCH'
-                minimum = 0.85
+                minimum = 0.80
             }
         }
         rule {
@@ -89,10 +90,6 @@ jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xlint:all" << "-Xlint:-processing" << "-Werror"
-}
-
 checkstyle {
     showViolations = true
     ignoreFailures = false
@@ -106,3 +103,19 @@ codenarcTest {
     maxPriority2Violations = 0
     maxPriority3Violations = 999
 }
+
+task testsWithFileDatabase(type: Test) {
+    systemProperty 'spring.profiles.active', 'file'
+}
+
+task testWithMemoryDatabase(type: Test) {
+    systemProperty 'spring.profiles.active', 'memory'
+}
+
+task testWithSqlDatabase(type: Test) {
+    systemProperty 'spring.profiles.active', 'sql'
+}
+
+check.dependsOn testsWithFileDatabase
+check.dependsOn testWithMemoryDatabase
+check.dependsOn testWithSqlDatabase
