--- a/build.gradle
+++ b/build.gradle
@@ -118,4 +118,4 @@ task testWithSqlDatabase(type: Test) {
 
 check.dependsOn testWithFileDatabase
 check.dependsOn testWithMemoryDatabase
-//check.dependsOn testWithSqlDatabase
+check.dependsOn testWithSqlDatabase
