--- a/src/main/resources/application-jpa-flyway.yml
+++ b/src/main/resources/application-jpa-flyway.yml
@@ -1,15 +1,17 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL94Dialect
   datasource:
-    url: jdbc:postgresql://localhost:5432/invoicing-jpa
+    url: jdbc:postgresql://localhost:5432/invoicing
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
 
 invoicing-system:
   database: jpa
