--- a/src/test/resources/application-jpa-flyway.yml
+++ b/src/test/resources/application-jpa-flyway.yml
@@ -1,15 +1,17 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL94Dialect
+        dialect: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:mem:db-jpa;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:db-jpa-flyway;DB_CLOSE_DELAY=-1
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  flyway:
+    enabled: true
 
 invoicing-system:
   database: jpa
