--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: 4.4
+
       - name: Build with Gradle
         run: ./gradlew build
