--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,9 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+        
+      - name: Archive reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: reports
+          path: build/reports
