--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: reports
-          path: build/reports
+          path: build/reports/**
+          if-no-files-found: error
