--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         run: ./gradlew build
         
       - name: Archive reports
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: reports
           path: build/reports/**
-          if-no-files-found: error
