--- a/build.gradle
+++ b/build.gradle
@@ -149,3 +149,7 @@ if (osName.contains("mac")) {
 
     check.dependsOn testWithPostgreSqlDatabase
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:all" << "-Xlint:-processing" << "-Werror"
+}
