--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ logging:
 
 spring:
   profiles:
-    active: sql
+    active: file
   flyway:
     enabled: false
+  security:
+    user:
+      name: piotr
+      password: abc123
